Add an implementation of ax_dump_tree for Aura Linux

Since it is quite complicated to go from an X11 window id to an
accessibility tree with AT-SPI, add a pattern option that accomplishes
essentially the same thing as the PowerShell scripts for Windows.
Eventually we can add support for Windows and the PowerShell scripts
will no longer be required.

Bug: 879147
Change-Id: Ib9fae5af9849df500f8cbdb6766f22092ac3ac90
Reviewed-on: https://chromium-review.googlesource.com/1196448
Reviewed-by: Thomas Anderson <thomasanderson@chromium.org>
Reviewed-by: Dirk Pranke <dpranke@chromium.org>
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Commit-Queue: Martin Robinson <mrobinson@igalia.com>
Cr-Commit-Position: refs/heads/master@{#589583}
Former-commit-id: 297928530fc400a897f62fa98ccf4a5485990f22