chrome/installer/linux/debian/update_dist_package_versions.py
@@ -35,6 +35,7 @@ SUPPORTED_UBUNTU_RELEASES = {
 
 PACKAGE_FILTER = set([
     "libappindicator3-1",
+    "libatspi2.0-0",
     "libasound2",
     "libatk1.0-0",
     "libatk-bridge2.0-0",
